Relaxed the data completeness a bit to bring the # of homes up to 24.
A little more documentation.

--- a/EV charging alignment with at home rooftop solar.ipynb
+++ b/EV charging alignment with at home rooftop solar.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# At Home Solar Charging notebooks: Exploring how EV charging aligns with rooftop solar generation by homes\n",
     "\n",
-    "<p>We will be using Pecan Street Inc. data from dataport to determine how electric vehicle charging aligns with rooftop solar generation.<br><br>\n",
+    "<p>We will be using Pecan Street Inc. data from Dataport to determine how electric vehicle charging aligns with rooftop solar generation.\n",
+    "    \n",
+    "<br>Data from 24 homes with fairly complete data for the year 2018 is used to explore this question.\n",
+    "    \n",
+    "<br>\n",
     "Pecans Streets data can be obtained by applying for a dataport account at https://www.dataport.pecanstreet.org.</p>\n"
    ]
   },
@@ -70,7 +74,8 @@
     "                                          and state='Texas'\n",
     "                                          and (egauge_1min_data_availability like '100%' \n",
     "                                               or \n",
-    "                                               egauge_1min_data_availability like '99%');\n",
+    "                                               egauge_1min_data_availability like '99%')\n",
+    "                                          ;\n",
     "         \"\"\"\n",
     "\n",
     "df = pd.read_sql_query(sqla.text(query), engine)"
@@ -111,9 +116,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select homes with atleast 99% data availability for year 2018.\n",
+    "#Select homes with atleast 90% data availability for year 2018.\n",
     "df2['perc'] = (df2['total_rec']/525600)*100\n",
-    "final_dataids = df2[df2['perc'] >= 99]\n",
+    "final_dataids = df2[df2['perc'] >= 90]\n",
     "final_dataids['dataid'].count()"
    ]
   },
@@ -441,7 +446,7 @@
    "metadata": {},
    "source": [
     "## Observations:\n",
-    "From the above graphs through out the year most homes started EV charging arount 9PM to 9:30PM and ended charging around 6AM (outside of solar peak hours). The average percentage of solar powered used for EV charging is around 4.6"
+    "From the above graphs through out the year most homes started EV charging arount 9PM to 9:30PM and ended charging around 6AM (outside of solar peak hours). The average percentage of solar powered used for EV charging is around 4.4 %"
    ]
   },
   {
