--- a/EV overall household demand.ipynb
+++ b/EV overall household demand.ipynb
@@ -12,20 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/usr/bin/python3.8'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import packages\n",
     "import pandas as pd\n",
@@ -42,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +70,8 @@
     "                                          and state='Texas'\n",
     "                                          and (egauge_1min_data_availability like '100%' \n",
     "                                               or \n",
-    "                                               egauge_1min_data_availability like '99%');\n",
+    "                                               egauge_1min_data_availability like '99%')\n",
+    "                                               LIMIT 25;\n",
     "         \"\"\"\n",
     "\n",
     "df = pd.read_sql_query(sqla.text(query), engine)"
@@ -89,54 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28 dataids selected listed here:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[114,\n",
-       " 379,\n",
-       " 1169,\n",
-       " 1202,\n",
-       " 1354,\n",
-       " 2814,\n",
-       " 3368,\n",
-       " 3829,\n",
-       " 3967,\n",
-       " 5109,\n",
-       " 5357,\n",
-       " 5450,\n",
-       " 5749,\n",
-       " 6139,\n",
-       " 6248,\n",
-       " 6691,\n",
-       " 7024,\n",
-       " 7850,\n",
-       " 7989,\n",
-       " 8142,\n",
-       " 8645,\n",
-       " 8847,\n",
-       " 8857,\n",
-       " 9484,\n",
-       " 9609,\n",
-       " 9647,\n",
-       " 9776,\n",
-       " 9932]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# grab dataids and convert them to a string to put into the SQL query\n",
     "dataids_list = df['dataid'].tolist()\n",
@@ -148,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,20 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Select homes with atleast 99% data availability for year 2018.\n",
     "df2['perc'] = (df2['total_rec']/525600)*100\n",
@@ -186,53 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27 dataids selected listed here:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[114,\n",
-       " 379,\n",
-       " 1169,\n",
-       " 1202,\n",
-       " 1354,\n",
-       " 2814,\n",
-       " 3368,\n",
-       " 3829,\n",
-       " 3967,\n",
-       " 5109,\n",
-       " 5357,\n",
-       " 5450,\n",
-       " 5749,\n",
-       " 6139,\n",
-       " 6248,\n",
-       " 6691,\n",
-       " 7024,\n",
-       " 7850,\n",
-       " 7989,\n",
-       " 8142,\n",
-       " 8645,\n",
-       " 8847,\n",
-       " 9484,\n",
-       " 9609,\n",
-       " 9647,\n",
-       " 9776,\n",
-       " 9932]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pull data for homes\n",
     "final_dataids_list = final_dataids['dataid'].tolist()\n",
@@ -244,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,138 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>grid</th>\n",
-       "      <th>solar</th>\n",
-       "      <th>car1</th>\n",
-       "      <th>demand</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.415982</td>\n",
-       "      <td>0.591499</td>\n",
-       "      <td>0.141586</td>\n",
-       "      <td>14.053443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.448659</td>\n",
-       "      <td>0.611549</td>\n",
-       "      <td>0.140052</td>\n",
-       "      <td>13.209873</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.644773</td>\n",
-       "      <td>0.392469</td>\n",
-       "      <td>0.134011</td>\n",
-       "      <td>12.919935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.492557</td>\n",
-       "      <td>0.496827</td>\n",
-       "      <td>0.156142</td>\n",
-       "      <td>15.781713</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.242824</td>\n",
-       "      <td>0.783674</td>\n",
-       "      <td>0.154365</td>\n",
-       "      <td>15.038017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.233964</td>\n",
-       "      <td>0.898189</td>\n",
-       "      <td>0.163874</td>\n",
-       "      <td>14.474548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.308313</td>\n",
-       "      <td>0.795541</td>\n",
-       "      <td>0.141104</td>\n",
-       "      <td>12.782870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.272400</td>\n",
-       "      <td>0.902010</td>\n",
-       "      <td>0.156608</td>\n",
-       "      <td>13.335014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.434916</td>\n",
-       "      <td>0.615579</td>\n",
-       "      <td>0.144223</td>\n",
-       "      <td>13.729029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0.058330</td>\n",
-       "      <td>1.044514</td>\n",
-       "      <td>0.128043</td>\n",
-       "      <td>11.610243</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         grid     solar      car1     demand\n",
-       "day                                         \n",
-       "1    0.415982  0.591499  0.141586  14.053443\n",
-       "2    0.448659  0.611549  0.140052  13.209873\n",
-       "3    0.644773  0.392469  0.134011  12.919935\n",
-       "4    0.492557  0.496827  0.156142  15.781713\n",
-       "5    0.242824  0.783674  0.154365  15.038017\n",
-       "6    0.233964  0.898189  0.163874  14.474548\n",
-       "7    0.308313  0.795541  0.141104  12.782870\n",
-       "8    0.272400  0.902010  0.156608  13.335014\n",
-       "9    0.434916  0.615579  0.144223  13.729029\n",
-       "10   0.058330  1.044514  0.128043  11.610243"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#replace null with 0's\n",
     "day_df = data_df.fillna(0)\n",
@@ -415,163 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12.099395212185625\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(day_df_grouped['demand'].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-43-8f61b09a3c12>:9: FutureWarning: weekofyear and week have been deprecated, please use DatetimeIndex.isocalendar().week instead, which returns a Series.  To exactly reproduce the behavior of week and weekofyear and return an Index, you may call pd.Int64Index(idx.isocalendar().week)\n",
-      "  week_df['week'] = week_df.index.week\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>grid</th>\n",
-       "      <th>solar</th>\n",
-       "      <th>car1</th>\n",
-       "      <th>demand</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>week</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.314949</td>\n",
-       "      <td>0.618052</td>\n",
-       "      <td>0.123255</td>\n",
-       "      <td>13.210628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0.239347</td>\n",
-       "      <td>0.745600</td>\n",
-       "      <td>0.149813</td>\n",
-       "      <td>15.210260</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0.248457</td>\n",
-       "      <td>0.805987</td>\n",
-       "      <td>0.133309</td>\n",
-       "      <td>12.642585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0.262556</td>\n",
-       "      <td>0.748703</td>\n",
-       "      <td>0.108095</td>\n",
-       "      <td>10.689190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0.271283</td>\n",
-       "      <td>0.725321</td>\n",
-       "      <td>0.116681</td>\n",
-       "      <td>11.707881</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0.410976</td>\n",
-       "      <td>0.613284</td>\n",
-       "      <td>0.162334</td>\n",
-       "      <td>15.848886</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0.122479</td>\n",
-       "      <td>0.876475</td>\n",
-       "      <td>0.159171</td>\n",
-       "      <td>15.933771</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0.126625</td>\n",
-       "      <td>0.876414</td>\n",
-       "      <td>0.141265</td>\n",
-       "      <td>14.083685</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>0.140430</td>\n",
-       "      <td>0.965652</td>\n",
-       "      <td>0.145467</td>\n",
-       "      <td>13.151555</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>0.607403</td>\n",
-       "      <td>0.538941</td>\n",
-       "      <td>0.162962</td>\n",
-       "      <td>14.215787</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          grid     solar      car1     demand\n",
-       "week                                         \n",
-       "9     0.314949  0.618052  0.123255  13.210628\n",
-       "10    0.239347  0.745600  0.149813  15.210260\n",
-       "11    0.248457  0.805987  0.133309  12.642585\n",
-       "12    0.262556  0.748703  0.108095  10.689190\n",
-       "13    0.271283  0.725321  0.116681  11.707881\n",
-       "14    0.410976  0.613284  0.162334  15.848886\n",
-       "15    0.122479  0.876475  0.159171  15.933771\n",
-       "16    0.126625  0.876414  0.141265  14.083685\n",
-       "17    0.140430  0.965652  0.145467  13.151555\n",
-       "18    0.607403  0.538941  0.162962  14.215787"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#replace null with 0's\n",
     "week_df = data_df.fillna(0)\n",
@@ -596,17 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12.362583361293526\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(week_df_grouped['demand'].mean())"
    ]
