--- a/ElectricVehicle/EV_charging_alignment_with_at_home_rooftop_solar.ipynb
+++ b/ElectricVehicle/EV_charging_alignment_with_at_home_rooftop_solar.ipynb
@@ -26,23 +26,22 @@
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
+    "import sys\n",
+    "sys.path.insert(0,'..')\n",
     "from config.read_config import get_database_config\n",
     "import numpy as np\n",
-    "import sys\n",
     "%matplotlib inline\n",
     "sys.executable  # shows you your path to the python you're using"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# read in db credentials from config/config.txt\n",
-    "# * make sure you add those to the config/config.txt file! *\n",
+    "## We've already extracted the data for you into the 4 seasons of data for the time period and made them available on the JupyterHub server in the directory `/shared/JupyterHub-Examples-Data/ev/`\n",
     "\n",
-    "database_config = get_database_config(\"./config/config.txt\")"
+    "If you wish to manipulate the queries for your own or work with the data from a live database connection, see the notebook named `Data-Extraction--EV_charging_alignment_with_at_home_rooftop_solar.ipynb` in this same directory.\n",
+    "That notebook goes through the initial home selection and data extraction, then exports those file to a zipped csv file."
    ]
   },
   {
@@ -51,104 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get our DB connection\n",
-    "engine = sqla.create_engine('postgresql://{}:{}@{}:{}/{}'.format(database_config['username'],\n",
-    "                                                                     database_config['password'],\n",
-    "                                                                     database_config['hostname'],\n",
-    "                                                                     database_config['port'],\n",
-    "                                                                     database_config['database']\n",
-    "                                                                     ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Select a list of Texas homes from dataport metadata having CAR and solar configured and also has data for year 2018.\n",
-    "query = \"\"\"select distinct dataid from other_datasets.metadata \n",
-    "                                          where car1='yes' and solar='yes' \n",
-    "                                          and egauge_1min_min_time < '2018-01-01' \n",
-    "                                          and egauge_1min_max_time > '2019-01-01'\n",
-    "                                          and state='Texas'\n",
-    "                                          and (egauge_1min_data_availability like '100%' \n",
-    "                                               or \n",
-    "                                               egauge_1min_data_availability like '99%')\n",
-    "                                          ;\n",
-    "         \"\"\"\n",
-    "\n",
-    "df = pd.read_sql_query(sqla.text(query), engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grab dataids and convert them to a string to put into the SQL query\n",
-    "dataids_list = df['dataid'].tolist()\n",
-    "print(\"{} dataids selected listed here:\".format(len(dataids_list)))\n",
-    "dataids_str = ','.join(list(map(str, dataids_list)))\n",
-    "dataids_str\n",
-    "dataids_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Check data completeness for dataids selected from metadata above.\n",
-    "\n",
-    "query2 = \"\"\"select dataid,count(*) total_rec from electricity.eg_realpower_1min \n",
-    "            where dataid in ({})\"\"\".format(dataids_str)\n",
-    "query2 = query2 + \"\"\" and localminute >= '2018-01-01' and localminute < '2019-01-01' group by 1\"\"\"\n",
-    "\n",
-    "df2 = pd.read_sql_query(sqla.text(query2), engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Select homes with atleast 90% data availability for year 2018.\n",
-    "df2['perc'] = (df2['total_rec']/525600)*100\n",
-    "final_dataids = df2[df2['perc'] >= 90]\n",
-    "final_dataids['dataid'].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pull data for homes\n",
-    "final_dataids_list = final_dataids['dataid'].tolist()\n",
-    "print(\"{} dataids selected listed here:\".format(len(final_dataids_list)))\n",
-    "final_dataids_str = ','.join(list(map(str, final_dataids_list)))\n",
-    "final_dataids_str\n",
-    "final_dataids_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fall\n",
-    "fall = \"\"\"select localminute::timestamp,car1,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-09-01' and localminute <  '2018-12-01' \"\"\"\n",
-    "fall = fall + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
-    "\n",
-    "fall_df = pd.read_sql_query(sqla.text(fall), engine)\n",
+    "# read fall data from the prepared csv.zip file\n",
+    "fall_df = pd.read_csv('/shared/JupyterHub-Examples-Data/ev/ev_charging_alignmnent_fall.zip', compression='zip')\n",
     "\n",
     "fall_df.head(15)"
    ]
@@ -159,13 +62,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#spring\n",
-    "spring = \"\"\"select localminute::timestamp,car1,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-03-01' and localminute <  '2018-06-01' \"\"\"\n",
-    "spring = spring + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
+    "# read spring data from the prepared csv.zip file\n",
+    "spring_df = pd.read_csv('/shared/JupyterHub-Examples-Data/ev/ev_charging_alignmnent_spring.zip', compression='zip')\n",
     "\n",
-    "spring_df = pd.read_sql_query(sqla.text(spring), engine)"
+    "spring_df.head(15)"
    ]
   },
   {
@@ -174,14 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#summer\n",
-    "summer = \"\"\"select localminute::timestamp,car1,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-06-01' and localminute <  '2018-09-01' \"\"\"\n",
-    "summer = summer + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
+    "# read fall data from the prepared csv.zip file\n",
+    "summer_df = pd.read_csv('/shared/JupyterHub-Examples-Data/ev/ev_charging_alignmnent_summer.zip', compression='zip')\n",
     "\n",
-    "# create a dataframe with the data from the sql query\n",
-    "summer_df = pd.read_sql_query(sqla.text(summer), engine)"
+    "summer_df.head(15)"
    ]
   },
   {
@@ -190,14 +86,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#winter\n",
-    "winter = \"\"\"select localminute::timestamp,car1,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-12-01' and localminute <  '2019-03-01' \"\"\"\n",
-    "winter = winter + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
+    "# read winter data from the prepared csv.zip file\n",
+    "winter_df = pd.read_csv('/shared/JupyterHub-Examples-Data/ev/ev_charging_alignmnent_winter.zip', compression='zip')\n",
     "\n",
-    "# create a dataframe with the data from the sql query\n",
-    "winter_df = pd.read_sql_query(sqla.text(winter), engine)"
+    "winter_df.head(15)"
    ]
   },
   {
