Some renaming and fixing a typo.

--- a/ElectricVehicle/EV_charging_alignment_with_at_home_rooftop_solar.ipynb
+++ b/ElectricVehicle/EV_charging_alignment_with_at_home_rooftop_solar.ipynb
@@ -41,7 +41,7 @@
     "## We've already extracted the data for you into the 4 seasons of data for the time period and made them available on the JupyterHub server in the directory `/shared/JupyterHub-Examples-Data/ev/`\n",
     "\n",
     "If you wish to manipulate the queries for your own or work with the data from a live database connection, see the notebook named `Data-Extraction--EV_charging_alignment_with_at_home_rooftop_solar.ipynb` in this same directory.\n",
-    "That notebook goes through the initial home selection and data extraction, then exports those file to a zipped csv file."
+    "That notebook goes through the initial home selection and data extraction, then exports those files to a zipped csv file."
    ]
   },
   {
