Split EV_charging_alignment_with_State_of_Texas_critical_peak_power_events.ipynb into data extraction and analysis notebooks.

--- a/ElectricVehicle/Data-Extraction--EV_charging_alignment_with_State_of_Texas_critical_peak_power_events.ipynb
+++ b/ElectricVehicle/Data-Extraction--EV_charging_alignment_with_State_of_Texas_critical_peak_power_events.ipynb
@@ -4,10 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Critical Peak Power Events Notebooks: Exploring how EV charging aligns with Texas's critical peak power events by homes\n",
+    "# Data Extraction for Critical Peak Power Events Notebooks: Exploring how EV charging aligns with Texas's critical peak power events by homes\n",
+    "\n",
+    "## This notebook will connect to the database and extract the data live and put it into compressed zip files in this directory. \n",
     "\n",
     "<p>We will be using data from ERCOT's 4CP calculations to determine how residential homes EV charging habits align with those Peak power events.<br><br>\n",
-    "ERCOT 4CP data is pulled from http://mis.ercot.com/misapp/GetReports.do?reportTypeId=13037&reportTitle=Planned%20Service%20Four%20Coincident%20Peak%20Calculations&showHTMLView=&mimicKey</p>"
+    "ERCOT 4CP data is pulled from http://mis.ercot.com/misapp/GetReports.do?reportTypeId=13037&reportTitle=Planned%20Service%20Four%20Coincident%20Peak%20Calculations&showHTMLView=&mimicKey</p>\n",
+    "\n",
+    "<br>\n",
+    "You'll need to modify the read_csv calls in that notebook to point at these instead of the ones we've extracted and prepared for you in the /shared/JupyterHub-Examples-Data/ directory on the JupyterHub server if you would like to use the ones exported by this notebook."
    ]
   },
   {
@@ -16,13 +21,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import packages\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
-    "from config.read_config import get_database_config\n",
     "import sys\n",
+    "sys.path.insert(0,'..')\n",
+    "from config.read_config import get_database_config\n",
+    "import numpy as np\n",
+    "%matplotlib inline\n",
     "sys.executable  # shows you your path to the python you're using"
    ]
   },
@@ -44,7 +53,7 @@
     "# read in db credentials from config/config.txt\n",
     "# * make sure you add those to the config/config.txt file! *\n",
     "\n",
-    "database_config = get_database_config(\"./config/config.txt\")"
+    "database_config = get_database_config(\"../config/config.txt\")"
    ]
   },
   {
@@ -154,57 +163,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2['localminute'] = df2['localminute'].dt.date\n",
-    "df2.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create new dataframe with columns dataid,car1 and date.\n",
-    "ev_cp_data = pd.DataFrame(df2, columns = ['dataid','car1', 'localminute'])\n",
-    "ev_cp_data.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#group data by dataid and date and take average ofcar1. \n",
-    "#This gives us avaerage ev usage for each home for each CP event day.\n",
-    "ev_cp_data_grouped = ev_cp_data.groupby(['localminute','dataid']).mean()\n",
-    "reset_ev_cp_data_grouped = ev_cp_data_grouped.reset_index()\n",
-    "reset_ev_cp_data_grouped.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#filtering data only for those interval when CAR1 is charging..\n",
-    "#todo Check this query\n",
-    "\n",
-    "ev_on = reset_ev_cp_data_grouped[reset_ev_cp_data_grouped['car1'] > 0.1]\n",
-    "ev_on = (ev_on['localminute'].value_counts()/50)*100\n",
-    "ev_on"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Observations:\n",
-    "\n",
-    "From the above results we can conclude that at least 2% of homes were charging an electric vehicle for each CP event from 2016-2019."
+    "# export the data to a csv file\n",
+    "# export fall to a zipped csv\n",
+    "compression_opts = dict(method='zip',\n",
+    "                        archive_name='ev_charging_alignmnent_tx_4cp_events.csv')\n",
+    "df2.to_csv('ev_charging_alignmnent_tx_4cp_events.zip', index=False,\n",
+    "          compression=compression_opts)"
    ]
   }
  ],
