Renamed and split EV_overall_household_demand notebook into data extraction an analysis.

--- a/ElectricVehicle/Data-Extraction--EV_charging_alignment_with_State_of_Texas_critical_peak_power_events.ipynb
+++ b/ElectricVehicle/Data-Extraction--EV_charging_alignment_with_State_of_Texas_critical_peak_power_events.ipynb
@@ -12,7 +12,7 @@
     "ERCOT 4CP data is pulled from http://mis.ercot.com/misapp/GetReports.do?reportTypeId=13037&reportTitle=Planned%20Service%20Four%20Coincident%20Peak%20Calculations&showHTMLView=&mimicKey</p>\n",
     "\n",
     "<br>\n",
-    "You'll need to modify the read_csv calls in that notebook to point at these instead of the ones we've extracted and prepared for you in the /shared/JupyterHub-Examples-Data/ directory on the JupyterHub server if you would like to use the ones exported by this notebook."
+    "You'll need to modify the read_csv calls in that notebook to point at these instead of the ones we've extracted and prepared for you in the /shared/JupyterHub-Examples-Data/ directory on the JupyterHub server if you would like to use the ones exported by this notebook in the analysis notebook."
    ]
   },
   {
@@ -164,7 +164,6 @@
    "outputs": [],
    "source": [
     "# export the data to a csv file\n",
-    "# export fall to a zipped csv\n",
     "compression_opts = dict(method='zip',\n",
     "                        archive_name='ev_charging_alignmnent_tx_4cp_events.csv')\n",
     "df2.to_csv('ev_charging_alignmnent_tx_4cp_events.zip', index=False,\n",
