--- a/ElectricVehicle/Data-Extraction--EV_overall_household_demand.ipynb
+++ b/ElectricVehicle/Data-Extraction--EV_overall_household_demand.ipynb
@@ -4,10 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overall Energy Demand Notebook: Exploring how a homes overall energy demand is attributable to at-home EV charging\n",
+    "# Dataport Database Extration for Overall Energy Demand Notebook: Exploring how a homes overall energy demand is attributable to at-home EV charging\n",
+    "\n",
+    "## This notebook will connect to the database and extract the data live and put it into compressed zip files in this directory. \n",
     "\n",
     "<p>We will be using Pecan Street Inc. data from dataport to calculate how much overall energy demand is used in homes by electric vehicle charging.<br><br>\n",
-    "Pecans Streets data can be obtained by applying for a dataport account at https://www.dataport.pecanstreet.org.</p>"
+    "Pecans Streets data can be obtained by applying for a dataport account at https://www.dataport.pecanstreet.org.</p>\n",
+    "\n",
+    "<p>You'll need to modify the read_csv calls in that notebook to point at these instead of the ones we've extracted and prepared for you in the /shared/JupyterHub-Examples-Data/ directory on the JupyterHub server if you would like to use the ones exported by this notebook in the analysis notebook.</p>"
    ]
   },
   {
@@ -16,15 +20,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import packages\n",
+    "# import packages\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
-    "from config.read_config import get_database_config\n",
-    "import numpy as np\n",
     "import sys\n",
+    "sys.path.insert(0,'..')\n",
+    "from config.read_config import get_database_config\n",
     "%matplotlib inline\n",
     "sys.executable  # shows you your path to the python you're using"
    ]
@@ -38,7 +41,7 @@
     "# read in db credentials from config/config.txt\n",
     "# * make sure you add those to the config/config.txt file! *\n",
     "\n",
-    "database_config = get_database_config(\"./config/config.txt\")"
+    "database_config = get_database_config(\"../config/config.txt\")"
    ]
   },
   {
@@ -62,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select a list of Texas homes from dataport metadata having CAR and also has data for year 2018.\n",
+    "# Select a list of Texas homes from dataport metadata having an electrical vehicle (car1) and also has data for year 2018.\n",
     "query = \"\"\"select distinct dataid from other_datasets.metadata \n",
     "                                          where car1='yes' and grid='yes'\n",
     "                                          and egauge_1min_min_time < '2018-01-01' \n",
@@ -97,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Check data completeness for dataids selected from metadata above.\n",
-    "\n",
+    "# Check data completeness for dataids selected from metadata above.\n",
+    "## Warning: This query takes some time to run.\n",
     "query2 = \"\"\"select dataid,count(*) total_rec from electricity.eg_realpower_1min \n",
     "            where dataid in ({})\"\"\".format(dataids_str)\n",
     "query2 = query2 + \"\"\" and localminute >= '2018-01-01' and localminute < '2019-01-01' group by 1\"\"\"\n",
@@ -112,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Select homes with atleast 99% data availability for year 2018.\n",
+    "# Select homes with atleast 99% data availability for year 2018.\n",
     "df2['perc'] = (df2['total_rec']/525600)*100\n",
     "final_dataids = df2[df2['perc'] >= 99]\n",
     "final_dataids['dataid'].count()"
@@ -124,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pull data for homes\n",
+    "# assemble list of selected homes\n",
     "final_dataids_list = final_dataids['dataid'].tolist()\n",
     "print(\"{} dataids selected listed here:\".format(len(final_dataids_list)))\n",
     "final_dataids_str = ','.join(list(map(str, final_dataids_list)))\n",
@@ -138,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# now go pull the data for the selected homes\n",
     "data_pull = \"\"\"select localminute::timestamp,car1,grid,solar \n",
     "               from electricity.eg_realpower_1min \n",
     "               where localminute >= '2018-03-01' and localminute <  '2018-06-01' \"\"\"\n",
@@ -153,25 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#replace null with 0's\n",
-    "day_df = data_df.fillna(0)\n",
-    "# convert localminute to pandas daytime type\n",
-    "day_df['datetime'] = pd.to_datetime(day_df['localminute'])\n",
-    "\n",
-    "day_df = day_df.set_index('datetime')\n",
-    "\n",
-    "#create day column\n",
-    "day_df['day'] = day_df.index.day\n",
-    "\n",
-    "#create new dataframes with grid, solar, car1, and day column\n",
-    "day_df_new = pd.DataFrame(day_df, columns = ['grid', 'solar', 'car1', 'day'])\n",
-    "\n",
-    "# group data based on day and get avg\n",
-    "day_df_grouped = day_df_new.groupby(['day']).mean()\n",
-    "\n",
-    "day_df_grouped['demand'] = day_df_grouped['car1'] / (day_df_grouped['grid']+ day_df_grouped['solar']) * 100\n",
-    "\n",
-    "day_df_grouped.head(10)\n"
+    "data_df"
    ]
   },
   {
@@ -180,59 +165,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(day_df_grouped['demand'].mean())"
+    "# export the data to a csv file\n",
+    "compression_opts = dict(method='zip',\n",
+    "                        archive_name='ev_overall_household_demand.csv')\n",
+    "data_df.to_csv('ev_overall_household_demand.zip', index=False,\n",
+    "          compression=compression_opts)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#replace null with 0's\n",
-    "week_df = data_df.fillna(0)\n",
-    "# convert localminute to pandas daytime type\n",
-    "week_df['datetime'] = pd.to_datetime(week_df['localminute'])\n",
-    "\n",
-    "week_df = week_df.set_index('datetime')\n",
-    "\n",
-    "#create day column\n",
-    "week_df['week'] = week_df.index.week\n",
-    "\n",
-    "#create new dataframes with grid, car1, and week column\n",
-    "week_df_new = pd.DataFrame(week_df, columns = ['grid', 'solar', 'car1', 'week'])\n",
-    "\n",
-    "# group data based on week and get avg\n",
-    "week_df_grouped = week_df_new.groupby(['week']).mean()\n",
-    "\n",
-    "week_df_grouped['demand'] = week_df_grouped['car1'] / (week_df_grouped['grid']+week_df_grouped['solar']) * 100\n",
-    "\n",
-    "week_df_grouped.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(week_df_grouped['demand'].mean())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Observations:\n",
-    "As seen above daily and weekly overall demand of EV chargers stays pretty consistant. On average both daily and week demand is a little over 12%. At most demand peaks at about 16% and at min deman peaks at 10%."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
