Rename, move, and separate the South vs West notebook.

--- a/ElectricVehicle/Data-Extraction--EV_overall_household_demand.ipynb
+++ b/ElectricVehicle/Data-Extraction--EV_overall_household_demand.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "# export the data to a csv file\n",
     "compression_opts = dict(method='zip',\n",
-    "                        archive_name='ev_overall_household_demand.csv')\n",
+    "                        archive_name='ev_overall_household_demand.zip')\n",
     "data_df.to_csv('ev_overall_household_demand.zip', index=False,\n",
     "          compression=compression_opts)"
    ]
