--- a/PV/Data-Extraction--PV-South-vs-West.ipynb
+++ b/PV/Data-Extraction--PV-South-vs-West.ipynb
@@ -24,8 +24,9 @@
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
-    "from config.read_config import get_database_config\n",
     "import sys\n",
+    "sys.path.insert(0,'..')\n",
+    "from config.read_config import get_database_config\n",
     "%matplotlib inline\n",
     "sys.executable  # shows you your path to the python you're using"
    ]
@@ -39,7 +40,7 @@
     "# read in db credentials from config/config.txt\n",
     "# * make sure you add those to the config/config.txt file! *\n",
     "\n",
-    "database_config = get_database_config(\"./config/config.txt\")\n"
+    "database_config = get_database_config(\"../config/config.txt\")\n"
    ]
   },
   {
@@ -111,6 +112,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export homes to csv file\n",
+    "# export the data to a csv file\n",
+    "compression_opts = dict(method='zip',\n",
+    "                        archive_name='pv_south_vs_west_homes.zip')\n",
+    "df.to_csv('pv_south_vs_west_homes.zip', index=False,\n",
+    "          compression=compression_opts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# grab dataids and convert them to a string to put into the SQL query\n",
     "dataids_list = df['dataid'].tolist()\n",
     "print(\"{} dataids selected listed here:\".format(len(dataids_list)))\n",
@@ -166,136 +181,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Checking completeness of data. We will consider only those homes that have 100% data for the 4CP dates\n",
-    "data = df2.groupby(['dataid']).size().reset_index(name='counts')\n",
-    "data['perc'] = (data['counts']/256)*100\n",
-    "ndata = data[data['perc'] == 100]\n",
-    "final_dataids = ndata['dataid']\n",
-    "\n",
-    "df3=df2.loc[df2['dataid'].isin(final_dataids)]\n",
-    "df3.count()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataids_list = df3['dataid'].unique()\n",
-    "len(dataids_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop any missing values\n",
-    "df3 = df3.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert localminute to pandas datetime type\n",
-    "df3['datetime'] = pd.to_datetime(df3['localminute'])\n",
-    "\n",
-    "# and set as index\n",
-    "df3 = df3.set_index('datetime')\n",
-    "df3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# group by month and dataid and take the mean of solar, grid, and usage within those groups\n",
-    "grouped = df3.groupby([pd.Grouper(freq='M'), 'dataid']).mean()\n",
-    "grouped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# map pv direction onto dataids with a merge after resetting the index\n",
-    "grouped = grouped.reset_index()\n",
-    "grouped = grouped.merge(df, how='left', left_on='dataid', right_on='dataid')\n",
-    "grouped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reindex by the date\n",
-    "grouped = grouped.set_index('datetime')\n",
-    "grouped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# regroup by year and pv_panel_direction and average the values\n",
-    "year_west_vs_south = (grouped.groupby([pd.Grouper(freq='Y'),'pv_panel_direction']).mean())\n",
-    "\n",
-    "# we don't need a mean of the dataids, so we can drop that column now\n",
-    "year_west_vs_south = year_west_vs_south.drop(columns=['dataid'])\n",
-    "year_west_vs_south"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now just drop unneeded columns and rearrange them and simplify the view\n",
-    "year_west_vs_south = year_west_vs_south.reset_index()\n",
-    "year_west_vs_south['year'] = pd.DatetimeIndex(year_west_vs_south['datetime']).year\n",
-    "year_west_vs_south = year_west_vs_south[['year', 'pv_panel_direction','solar', 'grid', 'usage']]\n",
-    "year_west_vs_south = year_west_vs_south.set_index('year')\n",
-    "year_west_vs_south"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Result: West Facing Solar Wins!\n",
-    "## Despite the higher in-home usage (green bars, 'usage') in the west facing houses the solar production is so high (blue bars, 'solar') that it is still using less power from the grid (orage bars, 'grid') in West-facing vs South-facing home in each paired year. In most cases here, grid is even negative meaning that the West-facing homes are putting power back on the grid."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.pyplot import figure\n",
-    "plot = year_west_vs_south.plot(kind='bar',figsize=(25,15), title=\"Solar production, Net Grid Usage (home usage from the grid minus solar production), and Home Usage During ERCOT 4CP events\")\n",
-    "labels = plot.set_xticklabels(['2016-South', '2016-West', '2017-South', '2017-West', '2018-South', '2018-West', '2019-South', '2019-West'])\n",
-    "ylabel = plot.set_ylabel('Usage/Production in kW')\n",
-    "xlabel = plot.set_xlabel('South vs West Facing Year')"
+    "# export the data to a csv file\n",
+    "compression_opts = dict(method='zip',\n",
+    "                        archive_name='pv_south_vs_west.zip')\n",
+    "df2.to_csv('pv_south_vs_west.zip', index=False,\n",
+    "          compression=compression_opts)"
    ]
   },
   {
